[package]
name = "maybe-rc"
version = "0.1.2"
edition = "2018"
authors = ["Rostylav Lesovyi <www.matrix.dev@gmail.com>"]
description = "Factory for creation of circular refcounted dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MatrixDev/rs-maybe-rc"
documentation = "https://docs.rs/maybe-rc/latest/maybe_rc/"

[dependencies]
